--- a/views/imports/hour_readingsMultiImport.ejs
+++ b/views/imports/hour_readingsMultiImport.ejs
@@ -19,9 +19,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
     <title>Document</title>
 </head>
+
 <body>
     <div class="container">
-        <h1 class="text-center">Избери компания</h1>
+        <h2 class="text-center">Избери компания</h2>
         <label class="container">EVN
             <input type="radio" id="evn" name="radio">
             <span class="checkmark"></span>
@@ -32,7 +33,7 @@
         </label>
     </div>
 
-    <h1 class="text-center">IMPORT ALL HOUR READINGS - EVN / EnergoPRO</h1>
+    <h2 class="text-center">Импорт по часови - ИВН / ЕнергоПРО </h2>
     <div class="form-group" id="input-excel">
         <label for="exampleFormControlTextarea1"></label>
         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
