--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -110,7 +110,7 @@
                                 <li class="nav-item">
                                     <a href="/users/import/STP/Readings" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p>СТП</p>
+                                        <p>СТП мерения</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
@@ -164,38 +164,6 @@
                             </a>
                         </li>
                     </ul>
-                    </li>
-                    <li class="nav-item has-treeview">
-                        <a href="#" class="nav-link">
-                            <i class="nav-icon fas fa-table"></i>
-                            <p>
-                                Таблици
-                                <i class="fas fa-angle-left right"></i>
-                            </p>
-                        </a>
-                        <ul class="nav nav-treeview">
-                            <li class="nav-item">
-                                <a href="/users/listHourReadings" class="nav-link">
-                                    <i class="far fa-circle nav-icon"></i>
-                                    <p>Мерения по часове</p>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="nav-item"> <a href="/users/listClients-hours" class="nav-link">
-                            <i class="fas fa-users"></i>
-                            <p class="ml-2">Клиенти - по часови</p>
-                        </a>
-                    </li>
-                    <li class="nav-item"> <a href="/users/listClients-STP" class="nav-link">
-                            <i class="fas fa-users"></i>
-                            <p class="ml-2">Клиенти - по СТП</p>
-                        </a>
-                    </li>
-                    <li class="nav-item"> <a href="/users/graphs/STP" class="nav-link">
-                            <i class="fas fa-signal"></i>
-                            <p class="ml-2">Графици - по СТП</p>
-                        </a>
                     </li>
                     <li class="nav-item"> <a href="/users/clients" class="nav-link">
                             <i class="fas fa-users"></i>
