--- a/views/invoicing/list-readings-stp.ejs
+++ b/views/invoicing/list-readings-stp.ejs
@@ -6,55 +6,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="../../../js/datatables/datatables.min.css">
     <script src="../../../js/datatables/datatables.js"></script>
     <link rel="stylesheet" href="../../css/checkboxes.css">
+    <link rel="stylesheet" href="../../css/inquiry-readings-stp.css">
 </head>
 
 <body>
-    <div class="container">
-        <h1 class="my-5 text-center">Импортирани Мерения - СТП</h1>
-        <form action="" method="GET">
-            <div class="row justify-content-around">
-                <div><span class="text-heading"> От дата</span> <input id="fromDate" name="fromDate" class="ml-2"
-                        type="date" type="search"></input>
-                </div>
-                <div><span class="text-heading"> До дата </span><input id="toDate" name="toDate" class="ml-2"
-                        type="date" type="search"></input>
-                </div>
-                <span class="text-heading mt-3"> Вид ЕРП:</span>
-                <label class="checkbox">
-                    <input type="checkbox" name="erp_type" value="evn" checked>
-                    <span>ИВН</span>
-                </label>
-                <label class="checkbox">
-                    <input type="checkbox" name="erp_type" value="cez" checked>
-                    <span>ЧЕЗ</span>
-                </label>
-                <label class="checkbox">
-                    <input type="checkbox" name="erp_type" value="energoPRO" checked>
-                    <span>ЕнергоПРО</span>
-                </label>
-            </div>
-            <div class="row justify-content-between my-3">
-                <div><span class="text-heading"> Име на клиент </span><input id="nameOfClient" list="names"
-                        name="clientNames" class="ml-2" type="search"></input>
-                    <datalist id="names">
-                    </datalist>
-                </div>
-                <div><span class="text-heading"> Идентификационен код </span><input id="clientID" name="clientID"
-                        class="ml-2" list="idList" type="search"></input>
-                    <datalist id="idList">
-                    </datalist>
-                </div>
-                <div><button type="submit" class="btn-primary btn-lg ml-3">Търсене</button></div>
-            </div>
-        </form>
-    </div>
 
+    <div class="card card-default mt-2">
+        <div class="card-header">
+            <h2 class="text-center">Импортирани Мерения - СТП</h2>
+        </div>
+        <div class="card-body">
+            <form action="" method="GET">
+                <div class="row justify-content-around">
+                    <div><span class="text-heading"> От дата</span> <input id="fromDate" name="fromDate" class="ml-2"
+                            type="date" type="search"></input>
+                    </div>
+                    <div><span class="text-heading"> До дата </span><input id="toDate" name="toDate" class="ml-2"
+                            type="date" type="search"></input>
+                    </div>
+                    <span class="text-heading mt-3"> Вид ЕРП:</span>
+                    <label class="checkbox">
+                        <input type="checkbox" name="erp_type" value="evn" id="evn" checked>
+                        <span>ИВН</span>
+                    </label>
+                    <label class="checkbox">
+                        <input type="checkbox" name="erp_type" value="cez" id="cez" checked>
+                        <span>ЧЕЗ</span>
+                    </label>
+                    <label class="checkbox">
+                        <input type="checkbox" name="erp_type" value="energoPRO" id="energoPRO" checked>
+                        <span>ЕнергоПРО</span>
+                    </label>
+                </div>
+                <div class="row justify-content-around my-3">
+                    <div><span class="text-heading"> Име на клиент </span><input id="nameOfClient" list="names"
+                            name="clientNames" class="ml-2" type="search"></input>
+                        <datalist id="names">
+                        </datalist>
+                    </div>
+                    <div><span class="text-heading"> Идентификационен код </span><input id="clientID" name="clientID"
+                            class="ml-2" list="idList" type="search"></input>
+                        <datalist id="idList">
+                        </datalist>
+                    </div>
+                </div>
+                <div class="row justify-content-center"><button type="submit"
+                        class="btn-primary btn-lg ml-3">Търсене</button></div>
+            </form>
+        </div>
+    </div>
     <table id="list-readings" class="display">
         <thead>
             <tr>
@@ -73,9 +78,9 @@
         </thead>
         <tbody id="tBody">
         </tbody>
-        </div>
-        </div>
+
     </table>
+
     <script src="../js/STP listing/list-readings.js"></script>
 </body>
 
