--- a/views/invoicing/list-readings-stp.ejs
+++ b/views/invoicing/list-readings-stp.ejs
@@ -44,13 +44,13 @@
                     </label>
                 </div>
                 <div class="row justify-content-around my-3">
-                    <div><span class="text-heading"> Име на клиент </span><input id="nameOfClient" list="names"
-                            name="clientNames" class="ml-2" type="search"></input>
+                    <div><span class="text-heading"> Име на клиент </span><input id="nameOfClient" autocomplete="off"
+                            list="names" name="clientNames" class="ml-2" type="search"></input>
                         <datalist id="names">
                         </datalist>
                     </div>
-                    <div><span class="text-heading"> Идентификационен код </span><input id="clientID" name="clientID"
-                            class="ml-2" list="idList" type="search"></input>
+                    <div><span class="text-heading"> Идентификационен код </span><input id="clientID" autocomplete="off"
+                            name="clientID" class="ml-2" list="idList" type="search"></input>
                         <datalist id="idList">
                         </datalist>
                     </div>
