--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -102,15 +102,27 @@
                             <a href="#" class="nav-link">
                                 <i class="nav-icon fas fa-edit"></i>
                                 <p>
-                                    Импорт на данни
+                                    Импорти
                                     <i class="fas fa-angle-left right"></i>
                                 </p>
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
+                                    <a href="/users/import/stp" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>СТП</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="/users/import/profiles" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Почасови</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
                                     <a href="/users/import/STP/Readings" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p>СТП мерения</p>
+                                        <p>Фактуриране</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
