--- a/views/clients/clients.ejs
+++ b/views/clients/clients.ejs
@@ -21,6 +21,7 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="../../../js/datatables/datatables.min.css">
     <link rel="stylesheet" href="../../css/checkboxes.css">
+    <link rel="stylesheet" href="../../css/clients-menu-table.css">
     <script src="../../../js/datatables/datatables.js"></script>
     <title>Document</title>
 </head>
@@ -33,7 +34,6 @@
         <div class="card-body">
             <div class="container clients text-center">
                 <div class="row justify-content-center">
-
                     <span class="mr-2 mt-3 text-heading">Вид ЕРП:</span>
                     <label class="checkbox">
                         <input type="checkbox" name="erp_type" value="evn" id="evn" checked>
