--- a/views/imports/profiles.ejs
+++ b/views/imports/profiles.ejs
@@ -26,7 +26,7 @@
         <h1 class="text-center mb-5">Импортиране на профили</h1>
         <h2 class="text-center mb-3">Напиши име на профил</h2>
         <div class="row justify-content-center">
-            <input class="text-center" type="text">
+            <input class="text-center" id="profile-name" type="text">
         </div>
         <h2 class="text-center">Избери компания</h2>
         <label class="container">EVN
